--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Header start -->
     <header class="header">
-        <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> Groco</a>
+        <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> INTER<span>EX</span></a>
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#features">features</a>
