--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>INTEREX</title>
 
     <!-- Swipper link -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
     <!-- FONT PREFERENCES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <!-- CSS LINK-->
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/slideshow.css">
 </head>
 
 <body>
@@ -23,12 +24,12 @@
     <header class="header">
         <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> INTER<span>EX</span></a>
         <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#features">features</a>
-            <a href="#products">products</a>
-            <a href="#categories">categories</a>
-            <a href="#review">review</a>
-            <a href="#blogs">blogs</a>
+            <a href="#home">Home</a>
+            <a href="#features">Features</a>
+            <a href="#products">Products</a>
+            <a href="#categories">Categories</a>
+            <a href="#review">Review</a>
+            <a href="#blogs">Blogs</a>
 
         </nav>
 
@@ -82,7 +83,47 @@
     <!-- home section end  -->
 
 
+    <!-- Home 2 slider -->
 
+    <section class="home2">
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="images/img1.jpg" style="width:100%">
+                <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="images/img2.jpg" style="width:100%">
+                <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="images/img3.jpg" style="width:100%">
+                <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+
+    </section>
+
+    <!-- Home slider section end -->
 
 
 
@@ -103,35 +144,25 @@
         <div class="box-container">
 
             <div class="box">
-                <img src="images/temp.jpg" alt="">
-                <h3>Fresh and organic</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare.</p>
-                <a href="#" class="btn">read more</a>
+                <img src="Interex img/FOTO-ARTIKULL.jpg" alt="">
+                <h3>INTEREX Prishtinë-Shkup</h3>
+                <p>Ofertat më të mira e çmimet më të lira, të produkteve më kualitative nga të gjitha sektoret për shtëpi i gjeni në <strong>Interex</strong>... </p>
+                <a href="Interex prishtine-shkup.html" class="btn">Lexo me shumë</a>
             </div>
 
             <div class="box">
-                <img src="images/temp.jpg" alt="">
-                <h3>Free Delivery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                </p>
-                <a href="#" class="btn">read more</a>
+                <img src="Interex img/babadimrat5-1-1130x635-1.jpg" alt="">
+                <h3>Interex babadimri</h3>
+                <p>Në këtë periudhë të fundvitit, ku çdo ditë numërohet deri në natën e ndërrimit të motmoteve dhe ku gjithsecili...</p>
+                <a href="#" class="btn">Lexo me shumë</a>
             </div>
 
             <div class="box">
-                <img src="images/temp.jpg" alt="">
-                <h3>Easy payments</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
-                <a href="#" class="btn">read more</a>
+                <img src="Interex img/780x431-festo-me-interex-780x4391-1.png" alt="">
+                <h3>Extra festë, extra ofertë!</h3>
+                <p>A jeni duke i pritur ofertat e fundvitit për të blerë krejt çka ju nevojitet? Epo pritja i'a ka vlejtur sepse <strong>Interesx</strong>...</p>
+                <a href="#" class="btn">Lexo me shumë</a>
             </div>
-
-            <!-- <div class="box">
-                <img src="images/temp.jpg" alt="">
-                <h3>Free Delivery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
-                <a href="#" class="btn">read more</a>
-            </div> -->
-
-
 
         </div>
 
@@ -371,7 +402,8 @@
 
                 <div class="swiper-slide box">
                     <img src="images/temp.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin sed libero enim sed faucibus turpis in eu mi.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Proin sed libero enim sed faucibus turpis in eu mi.</p>
                     <h3>John deo</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -384,7 +416,8 @@
 
                 <div class="swiper-slide box">
                     <img src="images/temp.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nec dui nunc mattis enim ut tellus. sed faucibus ut labore.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Nec dui nunc mattis enim ut tellus. sed faucibus ut labore.</p>
                     <h3>Teodor Rio</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -397,7 +430,8 @@
 
                 <div class="swiper-slide box">
                     <img src="images/temp.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean euismod elementum nisi quis eleifend. Morbi tincidunt.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Aenean euismod elementum nisi quis eleifend. Morbi tincidunt.</p>
                     <h3>Kristina len</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -410,7 +444,9 @@
 
                 <div class="swiper-slide box">
                     <img src="images/temp.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque sagittis purus sit amet volutpat consequat mauris nunc.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quisque sagittis purus sit amet volutpat consequat mauris nunc.
+                    </p>
                     <h3>Jeniffer lopes</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -423,7 +459,8 @@
 
                 <div class="swiper-slide box">
                     <img src="images/temp.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tincidunt augue interdum velit euismod. amet volutpat.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Morbi tincidunt augue interdum velit euismod. amet volutpat.</p>
                     <h3>Antonio damino</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -579,6 +616,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <!-- Java script link -->
+    <script src="slideshow.js"></script>
     <script src="script.js"></script>
 </body>
 
