--- a/index.html
+++ b/index.html
@@ -91,20 +91,26 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="images/img1.jpg" style="width:100%">
+                <div class="numbertext">1 / 4</div>
+                <img src="Interex img/Baneri-2-1.png" style="width:100%">
                 <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="images/img2.jpg" style="width:100%">
+                <div class="numbertext">2 / 4</div>
+                <img src="Interex img/Baneri-4.png" style="width:100%">
                 <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="images/img3.jpg" style="width:100%">
+                <div class="numbertext">3 / 4</div>
+                <img src="Interex img/Baneri-3.png" style="width:100%">
+                <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="Interex img/hero_home.png" style="width:100%">
                 <div class="text"><a href="#" class="btnslide">Me shumë</a></div>
             </div>
 
@@ -119,6 +125,7 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
         </div>
 
     </section>
@@ -146,21 +153,24 @@
             <div class="box">
                 <img src="Interex img/FOTO-ARTIKULL.jpg" alt="">
                 <h3>INTEREX Prishtinë-Shkup</h3>
-                <p>Ofertat më të mira e çmimet më të lira, të produkteve më kualitative nga të gjitha sektoret për shtëpi i gjeni në <strong>Interex</strong>... </p>
+                <p>Ofertat më të mira e çmimet më të lira, të produkteve më kualitative nga të gjitha sektoret për
+                    shtëpi i gjeni në <strong>Interex</strong>... </p>
                 <a href="Interex prishtine-shkup.html" class="btn">Lexo me shumë</a>
             </div>
 
             <div class="box">
                 <img src="Interex img/babadimrat5-1-1130x635-1.jpg" alt="">
                 <h3>Interex babadimri</h3>
-                <p>Në këtë periudhë të fundvitit, ku çdo ditë numërohet deri në natën e ndërrimit të motmoteve dhe ku gjithsecili...</p>
+                <p>Në këtë periudhë të fundvitit, ku çdo ditë numërohet deri në natën e ndërrimit të motmoteve dhe ku
+                    gjithsecili...</p>
                 <a href="#" class="btn">Lexo me shumë</a>
             </div>
 
             <div class="box">
                 <img src="Interex img/780x431-festo-me-interex-780x4391-1.png" alt="">
                 <h3>Extra festë, extra ofertë!</h3>
-                <p>A jeni duke i pritur ofertat e fundvitit për të blerë krejt çka ju nevojitet? Epo pritja i'a ka vlejtur sepse <strong>Interesx</strong>...</p>
+                <p>A jeni duke i pritur ofertat e fundvitit për të blerë krejt çka ju nevojitet? Epo pritja i'a ka
+                    vlejtur sepse <strong>Interesx</strong>...</p>
                 <a href="#" class="btn">Lexo me shumë</a>
             </div>
 
@@ -169,6 +179,50 @@
     </section>
 
     <!-- Features section end -->
+
+    <!-- Section oferta vlen -->
+
+    <section class="oferta-vlen">
+
+        <div class="oferta">
+            <div class="ofertah3">
+                <h3>OFERTA VLEN!</h3>
+            </div>
+
+            <div class="ofertaimg">
+                <img src="Interex img/Rectangle-1.png" alt="">
+                <a href="#" class="playbtn"><i class="fa fa-play"></i></a>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Section oferta vlen end -->
+
+
+    <!-- work application -->
+
+    <section class="workapp">
+        
+        <div class="container">
+
+            <div class="workimg">
+                <img src="Interex img/1-1.jpg" alt="">
+            </div>
+
+            <div class="apliko">
+                <h3>Bëhu pjesë e ekipit tonë profesional</h3>
+                <p>Excepteur sint occaecat cupidatat non proident sunt iculpa qui officia deserunt mollit anim est.
+                    laborum sed perspiciatis unde omnis natus error sit voluptatem accusantium dolore mque laudantium
+                    totam rem aperiam</p>
+
+                <a href="#" class="aplikobtn">Apliko Tani</a>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- Work app end -->
 
 
 
@@ -181,7 +235,7 @@
 
     <!--Product section -->
 
-    <section class="products" id="products">
+    <!-- <section class="products" id="products">
 
         <h1 class="heading">our <span>products</span></h1>
 
@@ -255,10 +309,10 @@
 
 
 
-        <!-- second section -->
+         second section -->
 
 
-        <div class="swiper product-slider">
+    <!-- <div class="swiper product-slider">
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide box">
@@ -326,12 +380,9 @@
 
 
 
-    </section>
+    </section> -->
 
     <!-- Product section end -->
-
-
-
 
 
 
