Fixed margin problem on mobile

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
     <section class="categories" id="categories">
 
-        <h1 class="heading">Product <span>categories</span></h1>
+        <h1 class="heading">Product <span>Categories</span></h1>
 
         <div class="box-conteiner">
 
@@ -445,7 +445,7 @@
 
     <section class="review" id="review">
 
-        <h1 class="heading">Customer's <span>review</span></h1>
+        <h1 class="heading">Customer's <span>Review</span></h1>
 
         <div class="swiper review-slider">
 
@@ -543,7 +543,7 @@
 
     <section class="blogs" id="blogs">
 
-        <h1 class="heading">our <span>Blogs</span></h1>
+        <h1 class="heading">Our <span>Blogs</span></h1>
 
         <div class="box-conteiner">
 
@@ -607,7 +607,7 @@
         <div class="box-conteiner">
 
             <div class="box">
-                <h3>Groco <i class="fas fa-shopping-basket"></i> </h3>
+                <h3>INTER<span>EX</span> <i class="fas fa-shopping-basket"></i> </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <div class="share">
                     <a href="" class="fab fa-facebook-f"></a>
@@ -618,7 +618,7 @@
             </div>
 
             <div class="box">
-                <h3>contact info</h3>
+                <h3>Contact Info</h3>
                 <a href="" class="links"> <i class="fas fa-phone"></i> +123-456-7890</a>
                 <a href="" class="links"> <i class="fas fa-mobile"></i> +123-456-0000</a>
                 <a href="" class="links"> <i class="fas fa-envelope"></i> duartrizani@gmail.com</a>
@@ -626,7 +626,7 @@
             </div>
 
             <div class="box">
-                <h3>Quick links</h3>
+                <h3>Quick Links</h3>
                 <a href="#home" class="links"> <i class="fas fa-arrow-right"></i> Home</a>
                 <a href="#features" class="links"> <i class="fas fa-arrow-right"></i> features</a>
                 <a href="#products" class="links"> <i class="fas fa-arrow-right"></i> Products</a>
