added another header

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </form>
 
     </header>
+    <header class="header1"><h3>This page is not finished yet!</h3></header>
 
     <!-- Header ends -->
 
