Just some notes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Header start -->
     <header class="header">
-        <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> INTER<span>EX</span></a>
+        <a href="#" class="logo"> <i class="fas fa-shopping-basket"> </i> INTER<span>EX </span> </a><a href="/index.html" class="logo"><i class="fas fa-arrow-alt-circle-left"></i></a>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#features">Features</a>
